Fixed CSS issue causing map to not display on small Safari screens

--- a/src/index.css
+++ b/src/index.css
@@ -197,12 +197,27 @@ body {
   }
 
   body {
-    height: 96vh;
+    height: 85vh;
     margin: 2vh 3vw 2vh 3vw;
   }
 
   .header-map-group{
     flex-direction: column;
+    gap: .1rem;
+  }
+
+  .map-legend-container{
+    flex: 1;
+  }
+
+  .map-container{
+    flex: 1;
+    max-height: 13.8rem; 
+  }
+
+  .square {
+    height: 2.3rem;
+    width: 2.3rem;
   }
 }
 
